# my-cmake-app

./: .gitignore  CMakeLists.txt  README.md  main.c  math_utils.c  string_utils.c  string_utils.h  string_utlis.h
